samples/_failures_safe/1761077468_69da53_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b7d94d27.c: In function ‘transform_bounds’:
./samples/SAFE/__tmp_b7d94d27.c:122:9: error: expected expression at end of input
  122 |         if (transformed.y > result.max.y) result.max.y =
      |         ^~
./samples/SAFE/__tmp_b7d94d27.c:122:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b7d94d27.c:122:9: error: expected declaration or statement at end of input
